style(css): remove table.ingredients td[align="right"] style rule style(html): add style rule for .ingredients td[align="right"] to prevent line breaks

--- a/src/css/variablesCustom.css
+++ b/src/css/variablesCustom.css
@@ -151,7 +151,3 @@
   --teaser-overlay-bg-padding-top-custom: 0.6em;
   --title-border-display: none;
 }
-
-table.ingredients td[align="right"]{
-  white-space: nowrap;
-}
